# mateco

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: dev.txt
example/: module_ipa.py  module_tts.py
mateco/: __init__.py  mateco.py
src/mateco/: __init__.py  __main__.py  _const.cp39-win_amd64.pyd  ipa.cp39-win_amd64.pyd  tts.cp39-win_amd64.pyd
tests/: test_mateco.py
