[metadata]
name = mateco
version = 1.2.1
description = Convert text to speech with the pretty voices
long_description = file: README.md
long_description_content_type = text/markdown
author = Joseph Quang
author_email = tquangsdh20@fsob.win
url = https://github.com/tquangsdh20/mateco
license = Apache 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32, macOS
classifiers = 
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.packages.find]
where=mateco

[bdist_wheel]
universal = true

[flake8]
max-line-length = 88
extend-ignore =
    E203

[options]
packages = 
    mateco
install_requires =
    text2ipa>=1.4.1
    pyfreetts>=0.1.0
package_dir =
    =.
include_package_data = yes
zip_safe = no
keywords = 
    freetts
    Text to speech
    tts
    text2speech
    speech
    voicemaker
    api
    phonetics
    texttophonetics